# src/RadixDlt.NetworkGateway.GatewayApiSdk/generated/Model/EntityMetadataResponseAllOf.cs
@@ -106,7 +106,7 @@ namespace RadixDlt.NetworkGateway.GatewayApiSdk.Model
         /// </summary>
         /// <param name="address">The Bech32m-encoded human readable version of the entity&#39;s global address (required).</param>
         /// <param name="metadata">metadata (required).</param>
-        public EntityMetadataResponseAllOf(string address = default(string), EntityMetadataResponseMetadata metadata = default(EntityMetadataResponseMetadata))
+        public EntityMetadataResponseAllOf(string address = default(string), EntityMetadataCollection metadata = default(EntityMetadataCollection))
         {
             // to ensure "address" is required (not null)
             if (address == null)
@@ -133,7 +133,7 @@ namespace RadixDlt.NetworkGateway.GatewayApiSdk.Model
         /// Gets or Sets Metadata
         /// </summary>
         [DataMember(Name = "metadata", IsRequired = true, EmitDefaultValue = true)]
-        public EntityMetadataResponseMetadata Metadata { get; set; }
+        public EntityMetadataCollection Metadata { get; set; }
 
         /// <summary>
         /// Returns the string presentation of the object
